// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基础渲染 1`] = `
<div
  className="sc-gsDKAQ bnsPjn sinoui-steps"
>
  <div
    className="sc-crHmcD gSMxO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd dMIqJy sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu TRPeJ sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-hKwDye eaAEUK sinoui-step-connector"
  >
    <hr
      className="sc-bdvvtL sc-dkPtRN ihiApg fsqNRP sinoui-divider"
    />
  </div>
  <div
    className="sc-crHmcD gSMxO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-hKwDye eaAEUK sinoui-step-connector"
  >
    <hr
      className="sc-bdvvtL sc-dkPtRN ihiApg fsqNRP sinoui-divider"
    />
  </div>
  <div
    className="sc-crHmcD gSMxO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器 1`] = `
<div
  className="sc-gsDKAQ bSBJss sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd dMIqJy sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu TRPeJ sinoui-step-title"
        >
          第一步
        </span>
      </div>
      <div
        className="sc-hKwDye eaAEUK sinoui-step-connector"
      >
        <hr
          className="sc-bdvvtL sc-dkPtRN ezzhLB koOyVg sinoui-divider sinoui-divider--vertical"
        />
      </div>
      <div
        className="sc-kDTinF iuctdG sinoui-step-description"
      />
    </div>
  </div>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第二步
        </span>
      </div>
      <div
        className="sc-hKwDye eaAEUK sinoui-step-connector"
      >
        <hr
          className="sc-bdvvtL sc-dkPtRN ezzhLB koOyVg sinoui-divider sinoui-divider--vertical"
        />
      </div>
      <div
        className="sc-kDTinF hHRBjT sinoui-step-description"
      />
    </div>
  </div>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第三步
        </span>
      </div>
      <div
        className="sinoui-step-connector"
      />
      <div
        className="sc-kDTinF hHRBjT sinoui-step-description"
      />
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器且标签垂直布局 1`] = `
<div
  className="sc-gsDKAQ ldSNrt sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd dMIqJy sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu TRPeJ sinoui-step-title"
        >
          第一步
        </span>
      </div>
      <div
        className="sc-hKwDye eaAEUK sinoui-step-connector"
      >
        <hr
          className="sc-bdvvtL sc-dkPtRN ezzhLB koOyVg sinoui-divider sinoui-divider--vertical"
        />
      </div>
      <div
        className="sc-kDTinF iuctdG sinoui-step-description"
      />
    </div>
  </div>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第二步
        </span>
      </div>
      <div
        className="sc-hKwDye eaAEUK sinoui-step-connector"
      >
        <hr
          className="sc-bdvvtL sc-dkPtRN ezzhLB koOyVg sinoui-divider sinoui-divider--vertical"
        />
      </div>
      <div
        className="sc-kDTinF hHRBjT sinoui-step-description"
      />
    </div>
  </div>
  <div
    className="sc-jrQzAO iXlkCX sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-iqseJM bFrrQi sinoui-step-container"
    >
      <span
        className="sc-jRQBWg cqbGdu sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第三步
        </span>
      </div>
      <div
        className="sinoui-step-connector"
      />
      <div
        className="sc-kDTinF hHRBjT sinoui-step-description"
      />
    </div>
  </div>
</div>
`;

exports[`正确渲染--标签垂直布局 1`] = `
<div
  className="sc-gsDKAQ gGIjAu sinoui-steps"
>
  <div
    className="sc-crHmcD toZdB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-hKwDye eaAEUK sinoui-step-connector"
    >
      <hr
        className="sc-bdvvtL sc-dkPtRN ihiApg fsqNRP sinoui-divider"
      />
    </div>
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container sinoui-step-container--vertical"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd dMIqJy sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu TRPeJ sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-crHmcD toZdB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-hKwDye eaAEUK sinoui-step-connector"
    >
      <hr
        className="sc-bdvvtL sc-dkPtRN ihiApg fsqNRP sinoui-divider"
      />
    </div>
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container sinoui-step-container--vertical"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-crHmcD toZdB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-bqiRlB TQgjm sinoui-step-container sinoui-step-container--vertical"
    >
      <span
        className="sc-jRQBWg bOYclC sinoui-step-icon"
      >
        <div
          className="sc-gKclnd bUCGBt sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-pVTFL ilDLpt sinoui-step-content"
      >
        <span
          className="sc-iCfMLu hsMUjs sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;
